--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install lint/type tooling
         run: |
           python -m pip install --upgrade pip
-          python -m pip install "ruff>=0.4" "mypy>=1.8"
+          python -m pip install "setuptools>=68" "wheel>=0.42" "ruff>=0.4" "mypy>=1.8"
       - name: Ruff lint
         run: python -m ruff check skill
       - name: Mypy type check
@@ -131,6 +131,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install "setuptools>=68" "wheel>=0.42"
           python -m pip install "torch>=2.3"
           python -m pip install --no-build-isolation --no-deps .
       - name: Run smoke tests
